--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <section class="home">
         <div class="home-img">
-            <img src="main.jpg" alt="">
+            <img src="Anime.jpg" alt="">
         </div>
         <div class="home-content">
             <h1>Hi,I'm<span> Dzarel</span></h1>
