--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="home-content">
             <h1>Hi,I'm<span> Dzarel</span></h1>
             <h3 class="typing-text">I'm a <span></span></h3>
-            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus labore dolores esse. Odit similique doloribus tenetur doloremque, sunt commodi in ipsa repudiandae debitis deleniti blanditiis quibusdam quaerat neque asperiores ea.</p>
+            <p>Codesphered01010 adalah komunitas yang didedikasikan untuk para pengembang, programmer, dan penggemar teknologi. Kami menyediakan tempat untuk belajar, berbagi pengetahuan, dan berkolaborasi dalam berbagai proyek coding.</p>
             <div class="social-icons">
                 <a href="#"><i class="fa-brands fa-linkedin"></i></a>
                 <a href="#"><i class="fa-brands fa-github"></i></a>
