--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
             <h3 class="typing-text">I'm a <span></span></h3>
             <p>Codesphered01010 adalah komunitas yang didedikasikan untuk para pengembang, programmer, dan penggemar teknologi. Kami menyediakan tempat untuk belajar, berbagi pengetahuan, dan berkolaborasi dalam berbagai proyek coding.</p>
             <div class="social-icons">
-                <a href="#"><i class="fa-brands fa-linkedin"></i></a>
-                <a href="#"><i class="fa-brands fa-github"></i></a>
+                <a href="https://youtube.com/@codesphere-d01010"><i class="fa-brands fa-youtube"></i></a>
+                <a href="https://github.com/DzarelDeveloper"><i class="fa-brands fa-github"></i></a>
                 <a href="#"><i class="fa-brands fa-x-twitter"></i></a>
-                <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                <a href="https://instagram.com/_4lghifari_"><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="#" class="btn">Hire me</a>
+            <a href="#" class="btn">See More</a>
         </div>
     </section>
 </body>
