--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio Website</title>
+    <title>Landing Page Portfolio</title>
 </head>
 <body>
     <header>
@@ -38,5 +38,21 @@
             <a href="#" class="btn">See More</a>
         </div>
     </section>
+    <script>
+    document.addEventListener('DOMContentLoaded', () => {
+        const nav = document.querySelector('nav');
+        const logo = document.querySelector('.logo');
+
+        logo.addEventListener('click', () => {
+            nav.classList.toggle('active');
+        });
+
+        document.addEventListener('click', (event) => {
+            if (!nav.contains(event.target) && !logo.contains(event.target)) {
+                nav.classList.remove('active');
+            }
+        });
+    });
+    </script>
 </body>
 </html>
